@@ -2,14 +2,14 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Topology Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.topology;singleton:=true
-Bundle-Version: 2.0.0
+Bundle-Version: 2.0.1
 Bundle-Activator: org.netxms.ui.eclipse.topology.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.core.runtime;bundle-version="3.9.0",
- org.netxms.ui.eclipse.objectview;bundle-version="2.0.0",
+ org.netxms.ui.eclipse.objectview;bundle-version="2.0.1",
  org.eclipse.rap.ui;bundle-version="2.3.0",
- org.netxms.webui.core;bundle-version="2.0.0",
+ org.netxms.webui.core;bundle-version="2.0.1",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.0"
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.1"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
