@@ -6,8 +6,9 @@
 - Added posibility to wakeup unmanaged node
 - Management console:
 	- Fixed broken popup menu actions on "Interfaces" tab
-	- Macro %USERNAME% can be used in object tools
-- Fixed issues: #725, #765, #766, #768, #769
+	- Macro %USERNAME%4 can be used in object tools
+	- VLAN highlight on port selection in VLAN view
+- Fixed issues: #725, #765, #766, #768, #769, #771
 
 
 *
